--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "components/*": ["src/components/*"],
+      "models/*": ["src/models/*"],
       "templates/*": ["src/components/templates/*"],
       "atoms/*": ["src/components/UI/atoms/*"],
       "organisms/*": ["src/components/UI/organisms/*"],
